--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.12",
         "rdlowrey/auryn": "^1.4",
-        "doctrine/dbal": "^2.10"
+        "doctrine/dbal": "^2.10",
+        "ramsey/uuid": "^3.9"
     },
     "autoload": {
         "psr-4": {
